--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cordova-plugin-filepath",
-  "version": "1.6.0",
+  "name": "community-cordova-plugin-filepath",
+  "version": "1.7.0",
   "description": "Resolve native file paths from content URLs for Cordova platforms",
   "cordova": {
-    "id": "cordova-plugin-filepath",
+    "id": "community-cordova-plugin-filepath",
     "platforms": [
       "android"
     ]
@@ -11,10 +11,9 @@
   "scripts": {
     "version": "sync-cordova-xml package.json plugin.xml --output plugin.xml && git add plugin.xml"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hiddentao/cordova-plugin-filepath.git"
-  },
+  "repository": "EYALIN/community-cordova-plugin-filepath/tree/master",
+  "homepage": "https://github.com/EYALIN/community-cordova-plugin-filepath/tree/master",
+  "funding": "https://github.com/sponsors/EYALIN",
   "keywords": [
     "cordova",
     "file",
