--- a/plugin.xml
+++ b/plugin.xml
@@ -16,8 +16,10 @@
   under the License.
 -->
 
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-filepath" version="1.6.0">
-    <name>cordova-plugin-filepath</name>
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        id="community-cordova-plugin-filepath" version="1.7.0">
+    <name>community-cordova-plugin-filepath</name>
     <description>Resolve native file paths from content URLs for Cordova platforms</description>
     <license>Apache 2.0</license>
     <keywords>cordova,file,ecosystem:cordova,cordova-android</keywords>
