--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "community-cordova-plugin-filepath",
-  "version": "1.7.1",
+  "name": "cordova-wtto00-filepath",
+  "version": "1.7.2",
   "description": "Resolve native file paths from content URLs for Cordova platforms",
+  "types": "types/index.d.ts",
+  "files": [
+    "src",
+    "types",
+    "www",
+    "plugin.xml"
+  ],
   "cordova": {
-    "id": "community-cordova-plugin-filepath",
+    "id": "cordova-wtto00-filepath",
     "platforms": [
       "android"
     ]
   },
-  "scripts": {
-    "version": "sync-cordova-xml package.json plugin.xml --output plugin.xml && git add plugin.xml"
-  },
-  "repository": "EYALIN/community-cordova-plugin-filepath/tree/master",
-  "homepage": "https://github.com/EYALIN/community-cordova-plugin-filepath/tree/master",
-  "funding": "https://github.com/sponsors/EYALIN",
+  "repository": "https://github.com/wtto00/cordova-wtto00-filepath.git",
+  "homepage": "https://github.com/wtto00/cordova-wtto00-filepath.git",
+  "funding": "https://wtto00.github.io/sponsor",
   "keywords": [
     "cordova",
     "file",
     "ecosystem:cordova",
     "cordova-android"
   ],
-  "author": "Ramesh Nair <ram@hiddentao.com>",
-  "license": "Apache 2.0",
-  "devDependencies": {
-    "sync-cordova-xml": "^0.4.0"
-  }
+  "author": "wtto00 <wtto00@outlook.com>",
+  "license": "MIT"
 }
