--- a/plugin.xml
+++ b/plugin.xml
@@ -1,30 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Licensed to the Apache Software Foundation (ASF) under one
-  or more contributor license agreements.  See the NOTICE file
-  distributed with this work for additional information
-  regarding copyright ownership.  The ASF licenses this file
-  to you under the Apache License, Version 2.0 (the
-  "License"); you may not use this file except in compliance
-  with the License.  You may obtain a copy of the License at
-    http://www.apache.org/licenses/LICENSE-2.0
-  Unless required by applicable law or agreed to in writing,
-  software distributed under the License is distributed on an
-  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-  KIND, either express or implied.  See the License for the
-  specific language governing permissions and limitations
-  under the License.
--->
-
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="community-cordova-plugin-filepath" version="1.7.1">
-    <name>community-cordova-plugin-filepath</name>
+        id="cordova-wtto00-filepath" version="1.7.2">
+    <name>cordova-wtto00-filepath</name>
     <description>Resolve native file paths from content URLs for Cordova platforms</description>
-    <license>Apache 2.0</license>
+    <license>MIT</license>
     <keywords>cordova,file,ecosystem:cordova,cordova-android</keywords>
-    <repo>https://github.com/hiddentao/cordova-plugin-filepath.git</repo>
-    <issue>https://github.com/hiddentao/cordova-plugin-filepath/issues</issue>
+    <repo>https://github.com/wtto00/cordova-wtto00-filepath.git</repo>
+    <issue>https://github.com/wtto00/cordova-wtto00-filepath/issues</issue>
 
     <engines>
         <engine name="cordova-android" version=">=3.1.0"/><!-- Uses CordovaResourceApi -->
@@ -39,7 +22,7 @@
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="FilePath">
-                <param name="android-package" value="com.hiddentao.cordova.filepath.FilePath"/>
+                <param name="android-package" value="wang.tato.cordova.filepath.FilePath"/>
                 <param name="onload" value="true"/>
             </feature>
         </config-file>
@@ -48,7 +31,7 @@
             <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
         </config-file>
 
-        <source-file src="src/android/FilePath.java" target-dir="src/com/hiddentao/cordova/filepath"/>
+        <source-file src="src/android/FilePath.java" target-dir="src/wang/tato/cordova/filepath"/>
     </platform>
-    <author email="ram@hiddentao.com">Ramesh Nair</author>
+    <author email="wtto00@outlook.com">Ramesh Nair</author>
 </plugin>
